# projectm

./: .travis.yml  TODO.meson  appveyor.yml  emscripten_cross_file.txt  meson.build  meson_options.txt
Resources/: Info.plist  projectM.icns
src/: meson.build
src/libprojectM/: config.inp.meson  meson.build
src/libprojectM/MilkdropPresetFactory/: Expr.hpp  meson.build
src/libprojectM/NativePresetFactory/: meson.build
src/libprojectM/Renderer/: meson.build
src/projectM-emscripten/: meson.build
src/projectM-iTunes/: meson.build
src/projectM-iTunes/projectM Visualizer/: AudioInputDeviceList.h
src/projectM-jack/: meson.build
src/projectM-pulseaudio/: meson.build
src/projectM-qt/: Makefile.am  meson.build  qprojectm_mainwindow.cpp
src/projectM-sdl/: meson.build
src/projectM-test/: meson.build
