libNativePresetFactory_sources = [
   'NativePreset.hpp',
   'NativePresetFactory.hpp',
   'MilkdropCompatability.hpp',
   'NativePresetFactory.cpp',
   'MilkdropCompatability.hpp',
   'NativePreset.hpp',
   'NativePresetFactory.hpp'
]

libNativePresetFactory = static_library(
   'NativePresetFactory',
   sources: libNativePresetFactory_sources,
   include_directories: include_directories('..'),
)

